Remove warnings from IntelliJ plugin verifier